k8s/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gemini-api-ingress
  namespace: ai
  annotations:
    kubernetes.io/ingress.class: nginx-streaming
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    nginx.ingress.kubernetes.io/enable-buffering: "false"
spec:
  rules:
    - host: ai.kaayaka.in
      http:
        paths:
          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: gemini-backend
                port:
                  number: 80
